--- a/Flip/app/src/main/res/menu/activity_main.xml
+++ b/Flip/app/src/main/res/menu/activity_main.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/m_player"
         android:icon="@drawable/ic_player"
-        android:title="@string/menu_player"/>
-    <item android:id="@+id/m_howto"
-        android:icon="@drawable/ic_howto"
-        android:title="@string/menu_howto"/>
-    <item android:id="@+id/m_about"
-        android:icon="@drawable/ic_about"
-        android:title="@string/menu_about"/>
+        android:title="@string/menu_player"
+        app:showAsAction="always|">
+
+    <menu>
+        <item android:id="@+id/m_howto"
+            android:icon="@drawable/ic_howto"
+            android:title="@string/menu_howto"
+            app:showAsAction="always|withText"/>
+
+        <item android:id="@+id/m_about"
+            android:icon="@drawable/ic_about"
+            android:title="@string/menu_about"
+            app:showAsAction="always|withText"/>
+    </menu>
+
+    </item>
 </menu>
