--- a/Flip/app/src/main/res/menu/activity_main.xml
+++ b/Flip/app/src/main/res/menu/activity_main.xml
@@ -4,7 +4,7 @@
     <item android:id="@+id/m_player"
         android:icon="@drawable/ic_player"
         android:title="@string/menu_player"
-        app:showAsAction="always|">
+        app:showAsAction="always">
 
     <menu>
         <item android:id="@+id/m_howto"
